@@ -1,7 +1,6 @@
 package nl.inl.blacklab.search;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -56,7 +55,7 @@ public class TermFrequencyList extends ResultsList<TermFrequency, ResultProperty
         if (sensitivity == null)
             sensitivity = annotation.sensitivity(index.defaultMatchSensitivity()).sensitivity();
 
-        List<Annotation> annotations = Arrays.asList(annotation);
+        List<Annotation> annotations = List.of(annotation);
         List<FiidLookup> fiidLookups = FiidLookup.getList(annotations, hits.queryInfo().index().reader());
         Contexts contexts = new Contexts(hits, annotations, contextSize, fiidLookups);
         MutableIntIntMap countPerWord = IntIntMaps.mutable.empty();
