@@ -18,8 +18,8 @@ package nl.inl.blacklab.search.lucene;
  */
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
@@ -56,9 +56,9 @@ public class BLSpanTermQuery extends BLSpanQuery {
         return new BLSpanTermQuery(queryInfo, q);
     }
 
-    SpanTermQuery query;
+    final SpanTermQuery query;
 
-    private TermStates termStates;
+    private final TermStates termStates;
 
     private boolean hasForwardIndex = false;
 
@@ -89,7 +89,7 @@ public class BLSpanTermQuery extends BLSpanQuery {
     public BLSpanTermQuery(Term term, TermStates termStates, QueryInfo queryInfo) {
         super(queryInfo);
         query = new SpanTermQuery(term, termStates);
-        termStates = termStates;
+        this.termStates = termStates;
     }
 
     @Override
@@ -207,7 +207,7 @@ public class BLSpanTermQuery extends BLSpanQuery {
         Term term = query.getTerm();
         String propertyValue = term.text();
         NfaState state = NfaState.token(term.field(), propertyValue, null);
-        return new Nfa(state, Arrays.asList(state));
+        return new Nfa(state, List.of(state));
     }
 
     @Override
@@ -242,7 +242,7 @@ public class BLSpanTermQuery extends BLSpanQuery {
     }
 
     @Override
-    public BLSpanQuery rewrite(IndexReader reader) throws IOException {
+    public BLSpanQuery rewrite(IndexReader reader) {
         return this;
     }
 
